#add_executable(test_matrix test_matrix.cpp ${SOURCES})
#add_executable(test_matrix
#	test_matrix.cpp
#	../src/Matrix.cpp)

#add_executable(test_radom
#	test_random.cpp
#	./Random/ClassA.cpp
#	../src/MapData.cpp)

#add_executable(test_crtp
#	CRTP/test_crtp.cpp
#	CRTP/InputContext.cpp
#	CRTP/ControlBase.cpp
#	CRTP/Timer.cpp
#	)

#target_link_libraries(test_crtp ${SDL2_LIBRARIES})
